# bibliothecarius

./: .gitignore  README.md  TODO.md  alembic.ini  deploy.sh  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0054a9df7a2f_add_table_bookmarks.py  0990945f64b1_update_verse_table.py  0b0db323962b_add_table_book_canon.py  15e4ddfdfbdd_added_books_table.py  20c9198fc631_add_table_translations.py  765539ab96d4_sic_mundus_creatus_est.py  81b1c93eeacc_add_table_translations.py  a0522eeab268_add_table_verses.py  a1bb2cd33227_add_table_canons.py  d282f69eccd9_add_table_book_canon.py  d89c65ef679f_add_table_favorite.py
bibliothecarius/: context.py  controller.py  database.py  entities.py  logic.py  main.py  mappers.py  repository.py
bibliothecarius/models/: __init__.py  book.py  bookmark.py  canon.py  favorite.py  translation.py  verse.py
notebooks/: ave_maria.ipynb
resources/: books.csv  canons.csv  translations.csv
resources/bibles/: acf.csv
resources/canons/: jewish_canon.csv  protestant_canon.csv  roman_catholic_canon.csv
tests/: conftest.py
tests/factories/: factory.py  factory_entities.py
tests/integration/: test_bible_sync.py  test_books_sync.py  test_canon_books_sync.py  test_canons_sync.py  test_check_bible.py  test_relation_canon_books.py  test_sync_bible.py  test_sync_books.py  test_sync_canons.py  test_sync_translations.py  test_translations_sync.py
tests/unit/: mappers_test.py  test_controller.py  test_logic.py  test_mappers.py
